--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.dicoding.githubapplication3">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <permission android:name="com.dicoding.githubapplication3.READ_DATABASE"
+        android:protectionLevel="normal"/>
 
     <application
         android:allowBackup="true"
@@ -11,6 +13,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubApplication3">
+        <provider
+            android:name=".provider.PenggunaContentProvider"
+            android:authorities="com.dicoding.githubapplication3"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.dicoding.githubapplication3.READ_DATABASE"/>
+
         <receiver
             android:name=".penerima.PengingatReceiver"
             android:enabled="true"
